--- a/src/CSS/Adoucisseurs.css
+++ b/src/CSS/Adoucisseurs.css
@@ -1,11 +1,53 @@
 .adoucisseursHead{
-    border: solid black;
+    display: flex;
+    flex-direction: column;
+    padding-left: 5%;
+    padding-top: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
+}
+
+.adoucisseurs1{
+    height: 70%;
+    width: 70%;
+    margin-left: 20%;
+    padding-bottom: 10%;
+}
+
+.text1{
+    line-height: 100%;
+}
+
+.text3{
+    display: flex;
+    flex-direction: row;
+}
+
+.subText1{
     display: flex;
     flex-direction: column;
 }
 
-.adoucisseurs1{
-    justify-content: center;
-    border: solid yellow;
-    
+.adoucisseurs2{
+    height: 70%;
+    width: 7    0%;
+    margin-top: 5%;
+    margin-left: 5%;
+}
+
+.text4{
+    display: flex;
+    flex-direction: row;
+}
+
+.subText2{
+    display: flex;
+    flex-direction: column;
+}
+
+.adoucisseurs3{
+    height: 70%;
+    width: 7    0%;
+    margin-top: 5%;
+    margin-left: 5%;
 }
