--- a/src/CSS/Adoucisseurs.css
+++ b/src/CSS/Adoucisseurs.css
@@ -14,11 +14,11 @@
     padding-bottom: 10%;
 }
 
-.text1{
+.text{
     line-height: 100%;
 }
 
-.text3{
+.text1{
     display: flex;
     flex-direction: row;
 }
@@ -35,7 +35,7 @@
     margin-left: 5%;
 }
 
-.text4{
+.text2{
     display: flex;
     flex-direction: row;
 }
